FIX: gaps around footer in dropdown panel and popup changed

--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -400,6 +400,8 @@
     background-color: $white;
     margin-top: -5px;
     border-radius: 0 0 6px 6px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
